Fix visibility of labels

--- a/src/App.css
+++ b/src/App.css
@@ -116,8 +116,8 @@ input[type="number"] {
   margin-top: 65px;
 }
 
-.recharts-pie {
-  align-self: center;
+.recharts-surface {
+  overflow: visible;
 }
 
 /*
